# too

./: .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: docker.yml  lint.yml  release.yml  test.yml
container/: Dockerfile
docs/: sample.csv
scripts/: cronjob.sh
src/too/: __init__.py  __main__.py  carton.py  database.py  datamodel.py  dump.py  exceptions.py  mock.py  models.py  tools.py  validate.py  xmatch.py
tests/: conftest.py  test_carton.py  test_cli.py  test_database.py  test_dump.py  test_mock.py  test_tools.py  test_validate.py  test_xmatch.py
tests/scripts/: create_test_database.py  design_mode.csv  sdss5db_too_test.sql
tests/scripts/empty_tables/: allstar_dr17_synspec_rev1.sql  allwise.sql  bhm_csc.sql  bhm_efeds_veto.sql  bhm_rm_v0.sql  catalog_from_sdss_dr19p_speclite.sql  catalog_to_allstar_dr17_synspec_rev1.sql  catalog_to_allwise.sql  catalog_to_bhm_csc.sql  catalog_to_bhm_efeds_veto.sql  catalog_to_bhm_rm_v0.sql  catalog_to_bhm_rm_v0_2.sql  catalog_to_catwise.sql  catalog_to_catwise2020.sql  catalog_to_gaia_dr2_source.sql  catalog_to_gaia_dr2_wd_sdss.sql  catalog_to_gaia_qso.sql  catalog_to_gaia_unwise_agn.sql  catalog_to_glimpse.sql  catalog_to_glimpse360.sql  catalog_to_guvcat.sql  catalog_to_kepler_input_10.sql  catalog_to_legacy_survey_dr10.sql  catalog_to_legacy_survey_dr10a.sql  catalog_to_legacy_survey_dr8.sql  catalog_to_mangatarget.sql  catalog_to_marvels_dr11_star.sql  catalog_to_marvels_dr12_star.sql  catalog_to_mastar_goodstars.sql  catalog_to_mastar_goodstars_orig.sql  catalog_to_milliquas_7_7.sql  catalog_to_panstarrs1.sql  catalog_to_ps1_g18.sql  catalog_to_sdss_dr13_photoobj.sql  catalog_to_sdss_dr13_photoobj_primary.sql  catalog_to_sdss_dr16_apogeestar.sql  catalog_to_sdss_dr16_specobj.sql  catalog_to_sdss_dr17_specobj.sql  catalog_to_sdss_dr19p_speclite.sql  catalog_to_skies_v1.sql  (+44 more)
