[tool.poetry]
name = "sdss-too"
version = "0.1.0a0"
description = "Targets of Opportunity (ToO) for SDSS-V"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/too"
repository = "https://github.com/sdss/too"
documentation = "https://sdss-too.readthedocs.org"
keywords = ["astronomy", "software"]
packages = [
    { include = "too", from = "src" }
]
include = []
scripts = { "too" = "too.__main__:too_cli" }

[tool.poetry.dependencies]
python = "^3.12,<4.0"
sdsstools = "^1.6.1"
sdss-target-selection = { git = "https://github.com/sdss/target_selection.git", branch = "too-xmatch" }
adbc-driver-postgresql = "^0.9.0"
polars = "^0.20.7"
httpx = "^0.26.0"
rich = "^13.7.0"
sdssdb = { git = "https://github.com/sdss/sdssdb.git", branch = "albireox/too_target" }
pyarrow = "^15.0.0"
click-option-group = "^0.5.6"
astropy-healpix = "^1.0.2"
astropy = "^6.0.0"
sdss-coordio = "^1.10.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.21.0"
ipdb = ">=0.12.3"
black = ">=24.1.1"
ruff = ">=0.1.0"
pandas-stubs = "^2.1.4.231227"
pytest = "^8.0.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["too"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "target_selection", "sdssdb", "coordio"]

[tool.pytest.ini_options]
addopts = "--cov too --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/too/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
    "NotImplementedError",
    'if __name__ == "__main__":'
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
